fixed old service tests